source/public/css/style-dark.css
/* ... */
/*********************************************/
/*            header                         */
/*********************************************/

#header {
  margin: .1rem;
  margin-bottom: .4rem;
  /* Flex properties for fixed header */
  flex: 0 0 auto;
  /* Flex container properties */
  display: flex;
  flex-direction: row;
  align-items: center;
}

#header .left {
  flex: 2;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}

#header .right {
  flex: 1;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

#header a {
  margin: 0 .35rem;
}

.tap {
  background-color: #3BA0C3;
  border-color: var(--color-type);
  border-style:  solid;
  border-width: .2rem;
  border-radius: 1rem;
  color: black;
  font-size: .87rem;flex: 0 0 auto;
  text-align: center;
  text-decoration: none;
  padding: .4rem .6rem;
  white-space: nowrap;
  /* Prevent background color leak outs */
  -webkit-background-clip: padding-box;
  -moz-background-clip:    padding;
  background-clip:         padding-box;
  overflow: hidden;
}

.title {
  color: var(--color-type);
  font-size: 1.52rem;
  font-weight: 700;
  text-decoration: none;
}

/*********************************************/
/*            footer                         */
/*********************************************/

#footer {
  margin: .7rem;
  margin-top: .185rem;
  font-size: .65rem;
  /* Flex properties for fixed footer */
  flex: 0 0 auto;
  /* Flex container properties */
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

#footer div {
  display: inline;
}

/*********************************************/
/*            content                        */
/*********************************************/

#content {
  background-color:  var(--bg-color-inner) ; /* almost black */
  margin: .1rem;
  color: #d0d0d2;
  /* Flex properties to work with fixed header and footer */
  flex: 1 1 auto;
  position: relative; /* need this to position inner content */
  overflow-y: auto;
  /* Flex container properties */
  display: flex;
  flex-direction: column;

}

/*********************************************/
/*            Home screen                   */
/*********************************************/
.grid {
  flex: 0 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}
/* all the children of the grid */
.grid>* {
  /*flex: 1 1 auto;*/
  min-width: 6rem;
  max-width: 6rem;
  min-height: 6.6rem;
  max-height: 6.6rem;
  padding: 1.8rem 1rem;
  margin: .5rem .5rem;
  font-size: 1.2rem;
}
.giantButton {
  color: black;
  font-weight: 600;
  text-align: center;
  background-color: #3BA0C3;
  border-color: var(--color-type);
  border-style: solid;
  border-width: .37rem;
  border-radius: 1rem;
  text-decoration: none;
  white-space: wrap;
}
.locked {
  background-color: #7e7e7e;
  border-color: #545454; /* a01453 */
  border-style: dashed;
}
.purchasePrice {
	font-style: italic;
	font-size: 1rem;
	color: #545454;
	margin-top: .46rem;
}
.purchasePrice::after {
	content: '\00a5';
}

/*********************************************/
/*            RESTAURANTS FILTER             */
/*********************************************/
#mainFilter {
  /* Allows for fixed element*/
  overflow: hidden;
  height: 100%; /* needed for proper layout (?) */
  /* Flex container properties to organize content */
  display: flex;
  flex-direction: column;
}

#mainResults {
  /* hide by default, flex for display */
  display: none;
  font-size: .8rem;
  /* Allows for fixed element*/
  overflow: hidden;
  height: 100%; /* needed for proper layout (?) */
  flex-direction: column;
}

/*********************************************/

#tagsTop {
  /* Flex properties to be fixed */
  flex: 0 0 auto;
}

#tagsTop p {
  margin: .4rem;
  margin-top: .12rem;
  font-size: .8rem;
}

#filterHeader {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
}

#filterHeaderTitle {
  flex: initial;
  margin: .5rem .38rem;
  color: var(--color-type);
  font-size: .94rem;
  font-weight: 700;
  text-decoration: none;
  white-space: nowrap;
}

#filterHeaderButton {
  flex: auto;
  margin: .6rem;
}
/*********************************************/
/*            RESTAURANTS TAGS               */
/*********************************************/
/** tag's container */
#tags {
  /* Flex properties to work with fixed header */
  flex: 1 1 auto;
  position: relative; /* need this to position inner content */
  overflow-y: auto;
}

/** a restaurant tag */
.tag {
  /* block */
  display: inline-block;
  cursor: pointer;
  border-style: solid;
  border-width: .2rem;
  border-color: var(--color-type);
  background-color: #3BA0C3;
  margin: .4rem .15rem;
  padding: .8rem 1.15rem;
  /* text */
  font-family: 'ITCAvantGardeStdBk', sans-serif;
  color: var(--color-txt-tag);
  font-size: .8rem;
  font-weight: 500;
  text-decoration: none;
  text-align: center;
  white-space: nowrap;
}

.tagType100 {
  /* blue 1 */
  border-color: #8ED1E7;
  background-color: var(--color-place);
}

.tagType80 {
  /* green */
  border-color: var(--color-cost);
  background-color: var(--color-lunch);
  /* background-color: #3BA011; */
}

.tagType60 {
  /* purpule */
  border-color: var(--color-date);
  background-color: var(--color-price);
}

.tagType40 {
  /* blue 2 */
  border-color: var(--color-place);
  background-color: var(--color-food);
}

/* Palette picker */
/* http://www.paletton.com/#uid=53p0u0knbGWcNSPiwMKr+Bny4to */

/*********************************************/
/*            RESTAURANTS RESULTS            */
/*********************************************/

#resultsTop {
  /* Flex properties to be fixed */
  flex: 0 0 auto;
}

#results {
  /* Flex properties to work with fixed header */
  flex: 1 1 auto;
  position: relative; /* need this to position inner content */
  overflow-y: auto;
}
/* ... */

